--- a/test.html
+++ b/test.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/animate/bower_components/animate.css/animate.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/hoverandclick.js"></script>
     <!-- 安装  $ bower install animate.css --save -->
     <!--      https://github.com/qtan/animate.css <-->
     <!-- demo web:https://daneden.github.io/animate.css/ -->
