--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/animate/bower_components/animate.css/animate.css">
+    <link rel="stylesheet" href="/animate/bower_components/animate.css/animate.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/hoverandclick.js"></script>
     <!-- 安装  $ bower install animate.css --save -->
@@ -15,8 +15,8 @@
 <body>
     <!--    ul#mainMenu.menu>li.item$*5>{text}-->
     <ul id="mainMenu" class="menu">
-        <li class="item1">text</li>
-        <li class="item2">text</li>
+        <li id="hover" class="item1">text hover</li>
+        <li class="item2">text click</li>
         <li class="item3">text</li>
         <li class="item4">text</li>
         <li class="item5">text</li>
